# ria

./: .buildinfo  .gitignore  CNAME  README.md  codecov.yml  genindex.html  index.html  meta.yaml  objects.inv  pyproject.toml  search.html  searchindex.js  simple_loop.py  test_dummy.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CODING.md  CONTRIBUTING.md  DIVERSITY_STATEMENT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: build-codecov.yml  build-docs.yml  codecov.yml  format.yml  simpletest.yml  sphinx.yml
_sources/dataset_manager/: index.rst.txt
_sources/intro/: index.rst.txt  installation.rst.txt
_sources/marketing/: riahub.rst.txt  riaran.rst.txt
_sources/model_builder/: index.rst.txt
_sources/utils/: index.rst.txt
dataset_manager/: index.html
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/application_packager/: index.rst
docs/source/intro/: contribution.rst  getting_started.rst
docs/source/marketing/: index.rst  riasuite.rst
intro/: contribution.html  getting_started.html  index.html  installation.html
marketing/: index.html  riahub.html  riaran.html
model_builder/: index.html
ria/: __init__.py
ria/diagnostics/: print_version_info.py
ria_cli/: cli.py
ria_cli/dataset_manager/: commands.py
ria_cli/diagnostics/: commands.py
ria_cli/model_builder/: commands.py
ria_cli/utils/: commands.py
scripts/: ria_cli.py
tests/dummy_test/: calculator_test.py  test_dummy.py  test_utils.py
utils/: index.html
