[tool.poetry]
name = "ria"
version = "0.1.2"
description = "Let's build intelligent radios together. 📡🚀"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [
  "cognitive radio",
  "intelligent radio",
  "software defined radio",
  "machine learning",
  "artificial intelligence",
  "deep learning"
]
authors = [
  "Qoherent Inc. <info@qoherent.ai>"
]
maintainers = [
  "Ashkan Beigi <ash@qoherent.ai>",
  "Michael Luciuk <michael@qoherent.ai>",
  "Alec Digby <alec@qoherent.ai>"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
packages = [
  { include = "ria" },
  { include = "ria_cli" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.0"
torch = "^2.2.0"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.2.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.urls]
"Qoherent" = "https://www.qoherent.ai/"
"Documentation" = "http://docs.radiointelligence.io/"
"Source" = "https://github.com/qoherent/ria"
"Issues" = "https://github.com/qoherent/ria/issues"

[tool.poetry.scripts]
ria = "ria_cli.cli:cli"

[tool.black]
line-length = 119
target-version = ["py310", "py311", "py312"]
exclude = '''
    /(
          \.git
        | \.github
        | build
        | dist
        | docs
        | venv
        | \.venv
        | env
        | \.env
        | \.idea
        | \.vscode
    )/
'''

[tool.isort]
profile = "black"
